refactor: given절의 Reservation을 Fixture로 수정
- ReservationService를 통해 create하지 않고 ReservationDbFixture를 활용하도록 수정